--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <link rel="stylesheet" href="1.css">
 </head>
 <body>
-  <div style="width:50px;height: 50px;border-radius: 50%;background-image: url('1.jpeg');position: fixed; right: 50px;bottom: 100px;background-size: cover;z-index: 2;"></div>
-  <div style="width:50px;height: 50px;border-radius: 50%;background-image: url('1.jpeg');position: fixed; right: 290px;bottom: 100px;background-size: cover;z-index: 2;"></div>
-  <div style="width:50px;height: 50px;border-radius: 50%;background-image: url('1.jpeg');position: fixed; right: 110px;bottom: 100px;background-size: cover;z-index: 2;"></div>
-  <div style="width:50px;height: 50px;border-radius: 50%;background-image: url('1.jpeg');position: fixed; right: 170px;bottom: 100px;background-size: cover;z-index: 2;"></div>
-  <div style="width:50px;height: 50px;border-radius: 50%;background-image: url('1.jpeg');position: fixed; right: 230px;bottom: 100px;background-size: cover;z-index: 2;"></div>
+  <div style="width:50px;height: 50px;border-radius: 50%;background-image: url('1.gif');position: fixed; right: 50px;bottom: 100px;background-size: cover;z-index: 2;"></div>
+  <div style="width:50px;height: 50px;border-radius: 50%;background-image: url('1.gif');position: fixed; right: 290px;bottom: 100px;background-size: cover;z-index: 2;"></div>
+  <div style="width:50px;height: 50px;border-radius: 50%;background-image: url('1.gif');position: fixed; right: 110px;bottom: 100px;background-size: cover;z-index: 2;"></div>
+  <div style="width:50px;height: 50px;border-radius: 50%;background-image: url('1.gif');position: fixed; right: 170px;bottom: 100px;background-size: cover;z-index: 2;"></div>
+  <div style="width:50px;height: 50px;border-radius: 50%;background-image: url('1.gif');position: fixed; right: 230px;bottom: 100px;background-size: cover;z-index: 2;"></div>
 
 <p style="font-family: monospace;font-size: 20px;font-weight: bolder;margin: 10px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet, maiores. Quas quos fuga, iusto, laboriosam nisi dolore perferendis, necessitatibus, illum totam accusamus eius alias id reprehenderit. Sapiente illum quasi, odit?
 Sed voluptates aliquid suscipit exercitationem amet, facilis dolorum stias dolorum iste excepturi ad, at illo fugiat dicta, quam dolores molestiae? Possimus rem laborum, facere vero accusantium!
